--- a/front-master/src/app/home/home.component.html
+++ b/front-master/src/app/home/home.component.html
@@ -26,6 +26,7 @@
 
 
     <span class="toolbar-spacer"></span>
+    <div class="toolbar-notification"><mat-icon class="icon">notifications</mat-icon></div>
     <div *ngIf="!currentUser; else logout" class="toolbar-button-row">
       <button mat-stroked-button [routerLink]="['/login']">Login</button>
       <button mat-stroked-button [routerLink]="['/signup']">SignUp</button>
@@ -36,7 +37,7 @@
     </ng-template>
   </mat-toolbar-row>
 </mat-toolbar>
-<app-course-list *ngIf="currentUser && currentUser.role === 'mentor'"></app-course-list>
+<app-course-list [searchText]="searchText" *ngIf="currentUser && currentUser.role === 'mentor'"></app-course-list>
 <app-mentor-list [searchText]="searchText" *ngIf="!currentUser"></app-mentor-list>
 <app-user-list *ngIf="currentUser && currentUser.role === 'user'" [userRole]="currentUser.role" [searchText]="searchText"></app-user-list>
 <router-outlet></router-outlet>
